--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,4 +87,7 @@ dependencies {
 
     // Logger
     implementation 'com.orhanobut:logger:2.2.0'
+
+    // circleimageview
+    implementation 'de.hdodenhof:circleimageview:3.0.1'
 }
