--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".ui.login.activity.LoginActivity">
+        <activity android:name=".ui.main.activity.MainActivity"></activity>
+        <activity android:name=".ui.login.activity.LoginActivity" />
+        <activity android:name=".ui.splash.activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
