--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.dagger2_api_login">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".ApplicationDagger"
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.main.activity.MainActivity"></activity>
+        <activity android:name=".ui.history.activity.HistoryDetailActivity"></activity>
+        <activity android:name=".ui.main.activity.MainActivity" />
         <activity android:name=".ui.login.activity.LoginActivity" />
         <activity android:name=".ui.splash.activity.SplashActivity">
             <intent-filter>
